--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
         gamepadConfig.vertical = checked;
         if(checked){
           gamepadConfig.axis.index = 0;
-          gamepadConfig.axis.invert = true;
+          gamepadConfig.axis.invert = false;
         } else {
           gamepadConfig.axis.index = 1;
           gamepadConfig.axis.invert = false;
